# srsRAN_Project_jbpf

./: .gitmodules  CMakeLists.txt  README.md  README_JBPF.md  init_modules.sh  jbpf_srs.patch
.github/workflows/: docker.yml
apps/gnb/: CMakeLists.txt  gnb.cpp  gnb_appconfig.h  gnb_appconfig_cli11_schema.cpp  gnb_appconfig_translators.cpp  gnb_appconfig_translators.h
apps/units/flexible_o_du/o_du_high/du_high/: du_high_config_cli11_schema.cpp  du_high_config_translators.cpp
configs/: jbpf_gnb_config.yml
include/srsran/jbpf/: jbpf_srsran_contexts.h  jbpf_srsran_defs.h  jbpf_srsran_hooks.h
include/srsran/ran/: slot_pdu_capacity_constants.h
include/srsran/scheduler/config/: slice_rrm_policy_config.h
lib/cu_cp/routines/: pdu_session_resource_modification_routine.cpp  pdu_session_resource_release_routine.cpp  pdu_session_resource_setup_routine.cpp
lib/cu_cp/ue_manager/: ue_manager_impl.cpp
lib/cu_up/: cu_up_manager_impl.cpp  pdu_session_manager_impl.cpp  ue_manager.cpp
lib/du/du_high/du_manager/du_ue/: du_ue_manager.cpp
lib/du/du_high/du_manager/procedures/: ue_creation_procedure.cpp
lib/e1ap/cu_cp/: e1ap_cu_cp_impl.cpp
lib/e1ap/cu_up/: e1ap_cu_up_impl.cpp
lib/e1ap/cu_up/procedures/: bearer_context_modification_procedure.cpp  bearer_context_release_procedure.cpp
lib/fapi_adaptor/mac/: CMakeLists.txt  fapi_to_mac_data_msg_translator.cpp  mac_to_fapi_translator.cpp
lib/mac/: CMakeLists.txt
lib/mac/mac_ctrl/: mac_controller.cpp
lib/mac/mac_ul/: pdu_rx_handler.cpp
lib/ngap/: ngap_impl.cpp
lib/ngap/procedures/: ngap_handover_resource_allocation_procedure.cpp  ngap_initial_context_setup_procedure.cpp  ngap_pdu_session_resource_modify_procedure.cpp  ngap_pdu_session_resource_setup_procedure.cpp  ngap_ue_context_release_procedure.cpp
lib/ofh/receiver/: CMakeLists.txt  ofh_message_receiver.cpp  ofh_message_receiver_impl.cpp
lib/ofh/transmitter/: CMakeLists.txt  ofh_message_transmitter_impl.cpp
lib/pdcp/: pdcp_entity_rx.cpp  pdcp_entity_rx.h  pdcp_entity_tx.cpp  pdcp_entity_tx.h  pdcp_entity_tx_rx_base.h
lib/rlc/: rlc_rx_am_entity.cpp  rlc_rx_am_entity.h  rlc_rx_entity.h  rlc_rx_tm_entity.cpp  rlc_rx_tm_entity.h  rlc_rx_um_entity.cpp  rlc_rx_um_entity.h  rlc_tx_am_entity.cpp  rlc_tx_am_entity.h  rlc_tx_entity.h  rlc_tx_tm_entity.cpp  rlc_tx_tm_entity.h  rlc_tx_um_entity.cpp  rlc_tx_um_entity.h
lib/rrc/: rrc_du_impl.cpp
lib/rrc/ue/procedures/: rrc_reconfiguration_procedure.cpp  rrc_reestablishment_procedure.cpp  rrc_setup_procedure.cpp  rrc_ue_capability_transfer_procedure.cpp
lib/scheduler/cell/: CMakeLists.txt  cell_harq_manager.cpp
lib/scheduler/slicing/: inter_slice_scheduler.cpp  inter_slice_scheduler.h
lib/scheduler/ue_context/: CMakeLists.txt  ue_cell.cpp
lib/scheduler/ue_scheduling/: CMakeLists.txt  ue_cell.cpp  ue_cell.h  ue_event_manager.cpp
lib/support/: CMakeLists.txt
lib/support/executors/: unique_thread.cpp
srsran_jbpf/: CMakeLists.txt
srsran_jbpf/docker_build/: Dockerfile  build_image.sh
srsran_jbpf/reverse_proxy/: CMakeLists.txt  main.cpp
srsran_jbpf/verifier/: CMakeLists.txt  srsran_verifier.cpp  srsran_verifier.hpp  srsran_verifier_cli.cpp
srsran_jbpf/verifier/specs/: context_descriptors.hpp  jbpf_srsran_hooks.h
